Retoques de validacion de usuario
